# mini_cli_chat

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  asynchronous.c  asynchronous.h  cli.c  cli.h  client.c  log.c  log.h  server.c  sonar-project.properties  tis.config  utils.h
src/: CMakeLists.txt  Makefile  asynchronous.c  asynchronous.h  cli.c  cli.h  client.c  client_lib.c  client_lib.h  log.c  log.h  server.c  utils.h
src/client/: CMakeLists.txt  cli.c  cli.h  client.c  client_lib.c  client_lib.h  client_network.c  client_network.h  client_settings.c  client_settings.h  network.c  network.h  screen.c  screen.h
src/server/: CMakeLists.txt  clients.c  clients.h  network.c  network.h  server.c  server_lib.c  server_lib.h  server_network.c  server_network.h  server_settings.c  server_settings.h
src/utils/: CMakeLists.txt  asynchronous.c  asynchronous.h  log.c  log.h  settings.c  settings.h  utils.c  utils.h
tests/: CMakeLists.txt  Makefile  fake_curses.cpp  fake_curses.hpp  fake_functions.cpp  fake_functions.hpp  log_test.cpp  test_test.cpp  unit_tests.cpp  utils.cpp  utils.hpp
tests/client/: CMakeLists.txt  cli_test.cpp  client_lib_test.cpp  client_settings_test.cpp  network_test.cpp  screen_test.cpp
tests/server/: CMakeLists.txt  clients_test.cpp  network_test.cpp  server_lib_test.cpp  server_settings_test.cpp
tests/utils/: CMakeLists.txt  asynchronous_test.cpp  log_test.cpp  settings_test.cpp  utils_test.cpp
