set(W
    -g
    -pedantic
    -Wall
    -Wextra

    -Wunreachable-code
    -Wmissing-include-dirs
    -Wfloat-equal
    -Wwrite-strings
    -Wpointer-arith
    -Wcast-qual
    -Wcast-align
    -Wshadow
    -Wredundant-decls
    -Wdouble-promotion
    -Winit-self
    -Wswitch-default
    -Wswitch-enum
    -Wundef
    -Winline
    -Wformat-security
    -Wformat=2
    -Wunused-macros
    -Wdate-time
    -Wpacked
    -Winvalid-pch
    -Wvla
    -Wdisabled-optimization
    -Wconversion
)

add_subdirectory(client)
add_subdirectory(server)
add_subdirectory(utils)
